Fixed major layout issues in IE
Note to myself. Never ever ever ever use negative z-index. Fucks things
up in anything else then Webkit.

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -50,8 +50,8 @@ body {
 header#site-head {
   background-color: @accent;
   position: fixed;
-  z-index: -20;
   top: 0;
+  z-index: 2;
   height: 45rem;
   width: 100%;
   background-position: 50% 50%;
@@ -63,13 +63,15 @@ header#site-head {
     background: url(../img/cover-pattern.png) 0 0 repeat;
     animation: pat-anim infinite 15s linear;
     a {
+      position: relative;
+      cursor: pointer;
       margin: 0 auto;
       width: 20rem;
+      height: 20rem;
       display: block;
     }
   }
   #site-head-content {
-    cursor: pointer;
     transition: all 0.75s ease-out;
     border-radius: 10rem;
     margin: 0 auto;
@@ -78,7 +80,6 @@ header#site-head {
     background-color: fadeout(@link, 15%);
     padding-top: 4rem;
     box-shadow: inset 0 0 0 0 fadeout(darken(@link, 15%), 5%);
-    user-select: none;
     &:hover {
       box-shadow: inset 0rem 0 0 10rem fadeout(darken(@link, 5%), 5%);
       h2 {
@@ -124,6 +125,10 @@ header#site-head {
 //==============================================================================
 
 main.content {
+  position: relative;
+  z-index: 3;
+  width: 100%;
+  display: table;
   overflow: hidden;
   box-shadow: 0 0px 30px 0 rgba(0, 0, 0, 0.35);
   background-color: @contentBg;
@@ -311,7 +316,7 @@ main.content {
 
 footer.site-footer {
   position: fixed;
-  z-index: -15;
+  z-index: 1;
   bottom: 0;
   width: 100%;
   height: 12rem;
